Correção dos arquivos etapa 3

--- a/public/etapas/3/mente-peturbada/entrada.in
+++ b/public/etapas/3/mente-peturbada/entrada.in
@@ -6,7 +6,7 @@ Participei do BxcOmP
 Temos 3 provas semana que vem.
 3
 O cOMpEteC me ensinou a programar
-Ouvi o episodio que o Pet lancou do FAla, CoRuja
+Ouvi o episodio que o Pet lancou do FAla, CoRuja!
 aquelaOwlficinas abriu minha mente
 3
 GraCE promoveu uma oficina incrivel
@@ -25,7 +25,7 @@ i si eu assistir um filminhooo einnss
 O PET tem muitos projetos legais emoji de like
 o mentepeturbada eh um desafio daora
 meu gato eh meu melhor amigo ;-;
-Fala, Coruja eh um projeto incrivel
+Fala, Coruja! eh um projeto incrivel
 pra mim o Owlficinas eh como uma mae
 2
 que clima lixo esse de sp
@@ -44,7 +44,7 @@ Adoro o PET e todos os projetos
 Bxcomp eh incrivel!
 Meu peixe eh tao fofo
 Grace eh um projeto inspirador
-meu pai ama o Fala, Coruja 
+meu pai ama o Fala, Coruja!
 As Owlficinas sao sempre divertidas
 2
 O Coruja Informa e zika.
@@ -70,7 +70,7 @@ Estou cansado hoje
 Vou ao bandeco
 PET eh incrivel
 3
-Hoje tem Fala, Coruja
+Hoje tem Fala, Coruja!
 vo estudar para a prova
 Vou ao bandeco, quem vem
 3
@@ -89,7 +89,7 @@ ouvi falar q soh pode entrar no pet se for linde
 O competec eh demais
 PET eh incrivel
 Owlficinas eh muito bom
-Fala, Coruja eh interessante
+Fala, Coruja! eh interessante
 Grace eh um ótimo projeto
 Coruja informa eh muito informativo
 Bxcomp eh desafiador
@@ -98,7 +98,7 @@ Vou ao competec
 Assisti a Owlficinas
 Estou no projeto Grace
 12
-Hoje tem Fala, Coruja
+Hoje tem Fala, Coruja!
 Eu amo o PET
 Vou ao competec
 Estou no Bxcomp
@@ -108,13 +108,13 @@ Gosto do Coruja informa
 PET eh incrivel
 O competec eh demais
 Owlficinas eh muito bom
-Fala, Coruja eh interessante
+Fala, Coruja! eh interessante
 Grace eh um otimo projeto
 13
 Estou participando de uma Owlficinas
 Eu amo o PET
 Vamos ao competec
-Participando do Fala, Coruja
+Participando do Fala, Coruja!
 Estou no projeto Grace
 Gosto do Coruja informa
 Hoje tem Bxcomp
@@ -128,7 +128,7 @@ Gosto do Coruja informa
 O competec eh demais
 PET eh incrivel
 Owlficinas eh muito bom
-Fala, Coruja eh interessante
+Fala, Coruja! eh interessante
 Grace eh um otimo projeto
 Coruja informa eh muito informativo
 Bxcomp eh desafiador
@@ -143,7 +143,7 @@ Owlficinas eh demais
 O competec eh demais
 PET eh incrível
 Owlficinas eh muito bom
-Fala, Coruja eh interessante
+Fala, Coruja! eh interessante
 Grace eh um otimo projeto
 Coruja informa eh muito informativo
 Bxcomp eh desafiador
@@ -161,7 +161,7 @@ Estou no projeto Grace
 Estou participando do Bxcomp
 Eu amo o PET
 Vamos ao competec
-Participando do Fala, Coruja
+Participando do Fala, Coruja!
 5
 Assisti a Owlficinas
 Estou no projeto Grace
@@ -178,7 +178,7 @@ O competec eh demais
 4
 PET eh incrivel
 Owlficinas eh muito bom
-Fala, Coruja eh interessante
+Fala, Coruja! eh interessante
 Grace eh um otimo projeto
 5
 Coruja informa eh muito informativo
@@ -223,18 +223,18 @@ nelinhas depois da aula?
 Estou participando do bxcomp
 Eu amo o PET
 Vamos pro competec esse fds
-Participando do Fala, Coruja
+Participando do Fala, Coruja!
 5
 Assisti uma owlficinas tranquilin agora
 Estou no Grace
-meu pai escuta o fala, coruja mano
+meu pai escuta o fala, coruja! mano
 Hoje tem bxcomp!!!
 Vou dar aula no competec vai dar nao
 7
 Estou participando do Bxcomp
 Eu amo o PET
 Vamos ao competec
-Participando do Fala, Coruja
+Participando do Fala, Coruja!
 PRAAA CIMA GRACEEE
 Gosto do Coruja informa
 e essa etapa do bxcomp einn
